// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`object arrays > add to end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          {
            "_key": "simon",
            "name": "Simon Gruber",
          },
          {
            "_key": "zeus",
            "name": "Zeus Carver",
          },
        ],
      },
    },
  },
]
`;

exports[`object arrays > add to end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "insert": {
        "after": "characters[-1]",
        "items": [
          {
            "_key": "simon",
            "name": "Simon Gruber",
          },
        ],
      },
    },
  },
]
`;

exports[`object arrays > change item 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "characters[_key==\\"simon\\"].name": "Simon Grüber",
      },
    },
  },
]
`;

exports[`object arrays > remove from end (multiple) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key==\\"simon\\"]",
        "characters[_key==\\"zeus\\"]",
      ],
    },
  },
]
`;

exports[`object arrays > remove from end (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key==\\"zeus\\"]",
      ],
    },
  },
]
`;

exports[`object arrays > remove from middle (single) 1`] = `
[
  {
    "patch": {
      "id": "die-hard-iii",
      "unset": [
        "characters[_key==\\"zeus\\"]",
      ],
    },
  },
  {
    "patch": {
      "id": "die-hard-iii",
      "set": {
        "characters[1]._key": "zeus",
        "characters[1].name": "Zeus Carver",
      },
    },
  },
]
`;
